delete the account fixed